[gd_scene load_steps=17 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_thinker.gd" type="Script" id=2]
[ext_resource path="res://Components/sound_player/sound/sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Item_Pickups/awp/awp.png" type="Texture" id=4]
[ext_resource path="res://Components/spawner/spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/muzzle_flash/muzzle_flash.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/sound_player/sound/sound.gd" type="Script" id=7]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_360.wav" type="AudioStream" id=8]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_unscope.wav" type="AudioStream" id=9]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_reload.wav" type="AudioStream" id=10]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_eject.wav" type="AudioStream" id=11]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_scope.wav" type="AudioStream" id=12]
[ext_resource path="res://UI/cursors/cursor_awp.png" type="Texture" id=13]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_equip.wav" type="AudioStream" id=14]
[ext_resource path="res://Entities/player/item_thinkers/awp/awp_dot.png" type="Texture" id=15]
[ext_resource path="res://UI/cursors/cursor_awp_unscoped.png" type="Texture" id=16]

[node name="awp_thinker" type="Node"]
script = ExtResource( 2 )
auto_ready_check = false
SECONDARY_ACTION_MODE = 3
HELD_ITEM_TEXTURE = ExtResource( 4 )
RELOAD_ANIM = "load"
my_item = "awp"
display_name = "AWP"
CURSOR = ExtResource( 16 )
CURSOR_MODE = 1
EQUIP_SOUND = ExtResource( 14 )
SCOPED_CURSOR = ExtResource( 13 )
cooldown_time = 1.1
reload_time = 1.7
ads_dist_ratio = 1.0
ads_dist_max = 200
ads_dist_min = 0
ads_zoom = 2.0
ads_zoom_speed = 0.4
mlg_time = 1.0
mlg_damage_bonus = 7

[node name="cooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="reload" type="Timer" parent="."]
one_shot = true

[node name="mlg_time" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="sound_player" parent="." instance=ExtResource( 1 )]
FREE_WHEN_EMPTY = false

[node name="reload" parent="sound_player" instance=ExtResource( 3 )]
stream = ExtResource( 10 )
bus = "Master"
MODE = 1
AUTO_PLAY = false

[node name="eject" type="AudioStreamPlayer2D" parent="sound_player"]
stream = ExtResource( 11 )
script = ExtResource( 7 )
MODE = 1
AUTO_PLAY = false

[node name="360" type="AudioStreamPlayer2D" parent="sound_player"]
stream = ExtResource( 8 )
script = ExtResource( 7 )
MODE = 1
AUTO_PLAY = false

[node name="scope" type="AudioStreamPlayer2D" parent="sound_player"]
stream = ExtResource( 12 )
script = ExtResource( 7 )
MODE = 1
AUTO_PLAY = false

[node name="unscope" type="AudioStreamPlayer2D" parent="sound_player"]
stream = ExtResource( 9 )
script = ExtResource( 7 )
MODE = 1
AUTO_PLAY = false

[node name="spawner" parent="." instance=ExtResource( 5 )]
standby_mode = true
thing = ExtResource( 6 )
spawn_on_free = false
rotation_mode = 1

[node name="dot" type="Sprite" parent="."]
z_index = 999
texture = ExtResource( 15 )

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
